--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ p {
 }
 
 #name {
-  background-image: linear-gradient(45deg, #f3ec78, #af4261);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   -moz-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
   -moz-text-fill-color: transparent;
+  background-image: linear-gradient(45deg, #f3ec78, #af4261);
 }
