--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ p {
 
 #name {
   -moz-background-clip: text;
-  -moz-background-clip: text;
   -webkit-background-clip: text;
   -moz-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent;
   background-image: linear-gradient(45deg, #f3ec78, #af4261);
 }
